--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "@humblebee/styled-components-breakpoint": "^2.1.4",
-    "gatsby": "^2.7.1",
-    "gatsby-background-image": "^0.6.2",
-    "gatsby-image": "^2.1.0",
+    "gatsby": "^2.7.5",
+    "gatsby-background-image": "^0.7.0",
+    "gatsby-image": "^2.1.2",
     "gatsby-plugin-advanced-sitemap": "^1.0.6",
     "gatsby-plugin-canonical-urls": "^2.0.13",
     "gatsby-plugin-google-analytics": "^2.0.20",
@@ -17,47 +17,37 @@
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-nprogress": "^2.0.10",
     "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-page-progress": "^0.0.10",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-sharp": "^2.1.2",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-source-filesystem": "^2.0.32",
-    "gatsby-transformer-sharp": "^2.1.18",
+    "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-transformer-sharp": "^2.1.20",
     "react": "^16.8.6",
     "react-accessible-accordion": "^3.0.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-loading": "^2.0.3",
-    "react-slick": "^0.24.0",
-    "react-table": "^6.10.0",
-    "react-tabs": "^3.0.0",
+    "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "reactjs-popup": "^1.4.1",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^4.2.0",
-    "styled-components-breakpoint": "^2.1.1",
-    "typography": "^0.16.19",
-    "typography-theme-stern-grove": "^0.16.19"
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "gatsby-plugin-eslint": "^2.0.4",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "gatsby-plugin-eslint": "^2.0.5",
     "stylelint": "^10.0.1",
-    "stylelint-config-prettier": "^5.1.0",
+    "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.6.0"
+    "stylelint-processor-styled-components": "^1.8.0"
   }
 }
