--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-sharp": "^2.1.20",
+    "mailgo": "^0.6.3",
     "react": "^16.8.6",
     "react-accessible-accordion": "^3.0.0",
     "react-burger-menu": "^2.6.10",
