--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@humblebee/styled-components-breakpoint": "^2.1.4",
-    "gatsby": "^2.7.5",
+    "gatsby": "^2.8.2",
     "gatsby-background-image": "^0.7.0",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-advanced-sitemap": "^1.0.6",
@@ -20,19 +20,19 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.1.2",
+    "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-sharp": "^2.1.20",
-    "mailgo": "^0.6.3",
+    "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-sharp": "^2.1.21",
+    "mailgo": "^0.6.6",
     "react": "^16.8.6",
     "react-accessible-accordion": "^3.0.0",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "6.0.0-beta",
     "react-typography": "^0.16.19",
-    "styled-components": "^4.2.0",
+    "styled-components": "^4.2.1",
     "typography": "^0.16.19"
   },
   "devDependencies": {
