--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby-plugin-netlify-cms": "^4.0.1",
     "gatsby-plugin-nprogress": "^2.0.10",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-axe": "^0.2.2",
@@ -25,7 +26,9 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.21",
+    "netlify-cms-app": "^2.9.1",
     "react": "^16.8.6",
     "react-accessible-accordion": "^3.0.0",
     "react-burger-menu": "^2.6.10",
